Fix iOS playback, shuffle
- Fix media controls / playback on iOS by switching back to MP3 files
- Added shuffle option to queue
- Bottom padding added for screens with bottom navbars
- Added [temp] icons
- Pressing backward skip during a song will now send you to the start of it

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,7 @@ dist-ssr
 *.local
 
 # Temporary
-public/AudioFiles-original
-public/AudioFiles
+public/AudioFiles*
 public/AlbumArt-original
 public/*.py
 public/errors.json
